@@ -15,6 +15,8 @@
 extern void xboard2uci_init           ();
 extern void xboard2uci_gui_step       (char string[]);
 extern void xboard2uci_engine_step    (char string[]);
+extern void xboard2uci_send_options   ();
+
 
 #endif // !defined XBOARD2UCI_H
 
